--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -563,4 +563,41 @@ main p {
 }
 
 
+
+/* THANK YOU CSS */
+
+.thankyou-page {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    padding: 0;
+    background-color: #ffffff;
+    text-align: center;
+}
+
+.thankyou-header {
+    background-color: #376f39;
+    color: rgb(255, 255, 255);
+    padding: 20px;
+}
+
+.thankyou-main {
+    margin-top: 20px;
+    padding: 100px;
+    background-color: rgb(177, 212, 173);
+    display: inline-block;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.thankyou-title, .thankyou-subtitle {
+    margin-bottom: 10px;
+    margin-left: 10%;
+}
+
+.thankyou-details p {
+    font-size: 18px;
+    color: #333;
+}
+
+
 /* DISCOVER CSS */
