--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -64,7 +64,7 @@ nav ul {
 }
 
 nav ul li a {
-    color: #ff6f00; /* Yellow Text Color (Navigation Links) */
+    color: #efeeee; /* Yellow Text Color (Navigation Links) */
     text-decoration: none;
     font-weight: bold;
     padding: 10px;
@@ -107,6 +107,15 @@ footer {
 .footer-icons img {
     width: 30px;
     height: 30px;
+}
+
+/* Email Link Color */
+footer a {
+    color: #ff5722; /* Bright Orange */
+}
+
+footer a:hover {
+    color: #e64a19; /* Darker Orange on Hover */
 }
 
 /* Responsive Navigation & Footer */
@@ -363,7 +372,7 @@ section {
 }
 
 .application-form h2 {
-    color: #d7ccc8; /* Light Grey Color */
+    color: #000000; /* Light Grey Color */
     text-align: center;
     margin-bottom: 15px;
 }
