--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -111,7 +111,7 @@ footer {
 
 /* Email Link Color */
 footer a {
-    color: #ff5722; /* Bright Orange */
+    color: #f0f0f0; /* Bright Orange */
 }
 
 footer a:hover {
