--- a/chamber/styles/reset.css
+++ b/chamber/styles/reset.css
@@ -396,7 +396,7 @@ section {
 }
 
 .application-form input[type="submit"] {
-    background-color: #4b3d33; /* Bright Orange */
+    background-color: #fcb785; /* Bright Orange */
     color: #ffffff; /* White */
     border: none;
     padding: 10px;
